--- a/mplayer/code/src/Makefile
+++ b/mplayer/code/src/Makefile
@@ -2,6 +2,7 @@ OBJ = mplayer
 OBJS += main.c
 OBJS += mediaServer.c
 OBJS += menu.c
+OBJS += doub_list_for_fileList.c
 CC = gcc
 INCLUDE= -I../include
 
